[gd_scene load_steps=43 format=2]

[ext_resource path="res://scenes/entities/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/player_50 Side Walking_0.png" type="Texture" id=2]
[ext_resource path="res://assets/player/player_50 Side Walking_1.png" type="Texture" id=3]
[ext_resource path="res://assets/player/player_50 Side Walking_2.png" type="Texture" id=4]
[ext_resource path="res://assets/player/player_25 Side Walking_0.png" type="Texture" id=5]
[ext_resource path="res://assets/player/player_25 Side Walking_1.png" type="Texture" id=6]
[ext_resource path="res://assets/player/player_25 Side Walking_2.png" type="Texture" id=7]
[ext_resource path="res://assets/player/player_100 Down Walking_0.png" type="Texture" id=8]
[ext_resource path="res://assets/player/player_75 Down Walking_0.png" type="Texture" id=9]
[ext_resource path="res://assets/player/player_100 Down Walking_1.png" type="Texture" id=10]
[ext_resource path="res://assets/player/player_100 Down Walking_2.png" type="Texture" id=11]
[ext_resource path="res://assets/player/player_50 Up Walking_0.png" type="Texture" id=12]
[ext_resource path="res://assets/player/player_50 Up Walking_1.png" type="Texture" id=13]
[ext_resource path="res://assets/player/player_50 Up Walking_2.png" type="Texture" id=14]
[ext_resource path="res://assets/player/player_25 Down Walking_0.png" type="Texture" id=15]
[ext_resource path="res://assets/player/player_25 Down Walking_1.png" type="Texture" id=16]
[ext_resource path="res://assets/player/player_25 Down Walking_2.png" type="Texture" id=17]
[ext_resource path="res://assets/player/player_100 Side Walking_0.png" type="Texture" id=18]
[ext_resource path="res://assets/player/player_50 Down Walking_0.png" type="Texture" id=19]
[ext_resource path="res://assets/player/player_50 Down Walking_1.png" type="Texture" id=20]
[ext_resource path="res://assets/player/player_50 Down Walking_2.png" type="Texture" id=21]
[ext_resource path="res://assets/player/player_25 Up Walking_0.png" type="Texture" id=22]
[ext_resource path="res://assets/player/player_25 Up Walking_1.png" type="Texture" id=23]
[ext_resource path="res://assets/player/player_25 Up Walking_2.png" type="Texture" id=24]
[ext_resource path="res://assets/player/player_100 Side Walking_1.png" type="Texture" id=25]
[ext_resource path="res://assets/player/player_100 Side Walking_2.png" type="Texture" id=26]
[ext_resource path="res://assets/player/player_75 Up Walking_0.png" type="Texture" id=27]
[ext_resource path="res://assets/player/player_75 Side Walking_0.png" type="Texture" id=28]
[ext_resource path="res://assets/player/player_75 Up Walking_1.png" type="Texture" id=29]
[ext_resource path="res://assets/player/player_75 Up Walking_2.png" type="Texture" id=30]
[ext_resource path="res://assets/player/player_75 Side Walking_1.png" type="Texture" id=31]
[ext_resource path="res://assets/player/player_75 Side Walking_2.png" type="Texture" id=32]
[ext_resource path="res://assets/player/player_100 Up Walking_0.png" type="Texture" id=33]
[ext_resource path="res://assets/player/player_100 Up Walking_1.png" type="Texture" id=34]
[ext_resource path="res://assets/player/player_100 Up Walking_2.png" type="Texture" id=35]
[ext_resource path="res://assets/player/player_75 Down Walking_1.png" type="Texture" id=36]
[ext_resource path="res://assets/player/player_75 Down Walking_2.png" type="Texture" id=37]
[ext_resource path="res://assets/sounds/LD44_foot_steps.ogg" type="AudioStream" id=38]
[ext_resource path="res://assets/sounds/LD44_dash.ogg" type="AudioStream" id=39]
[ext_resource path="res://assets/sounds/LD44_player_hit_sound.ogg" type="AudioStream" id=40]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "50WalkSide",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "25WalkSide",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "100IdleDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "75IdleDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "50IdleSide",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "100WalkDown",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "50WalkUp",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "25WalkDown",
"speed": 8.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "100IdleSide",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "50WalkDown",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "25IdleDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "25WalkUp",
"speed": 8.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "100WalkSide",
"speed": 8.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "75IdleUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "75IdleSide",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "50IdleUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "75WalkUp",
"speed": 8.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "75WalkSide",
"speed": 8.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "25IdleUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": true,
"name": "100WalkUp",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "25IdleSide",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "75WalkDown",
"speed": 8.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "100IdleUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "50IdleDown",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.98987, 7 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 1 )
animation = "100IdleDown"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -2 )
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )
volume_db = -9.088

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 39 )
volume_db = -5.049

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )

[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="DashDuration" to="." method="_on_DashDuration_timeout"]
